--- a/Date.ipynb
+++ b/Date.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqkN89t+AOPzH68g3OzfMp",
+      "authorship_tag": "ABX9TyNTGnMsUZBSbxgnqFg16dvv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,16 +28,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "9TI0Pj1kxcKw"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9TI0Pj1kxcKw",
+        "outputId": "7f019ac5-52d6-4268-c4c0-7f920b2bb6f7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a date in the formate: MM/DD/YYYY02/20/2024\n",
+            "The month is 02, the day is 20, the year is 2024\n"
+          ]
+        }
+      ],
       "source": [
-        "s = str(input(\"Enter a date in the formate: MM/DD/YYYY\"))\n",
-        "month = s[0:2]\n",
-        "day = s[3:5]\n",
-        "year = s[6:]\n",
+        "date = str(input(\"Enter a date in the formate: MM/DD/YYYY\"))\n",
+        "month = date[0:2]\n",
+        "day = date[3:5]\n",
+        "year = date[6:]\n",
+        "\n",
         "print(f\"The month is {month}, the day is {day}, the year is {year}\")\n"
       ]
     }
